--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,60 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-node_modules/
+# =========================
+# Environment files (DO NOT COMMIT)
+# =========================
+.env
 .env.local
-.next/
-dist/
-*.log
-# dependencies
-/node_modules
-/.pnp
+.env.development
+.env.production
+
+# =========================
+# Dependencies
+# =========================
+node_modules/
+.pnp
 .pnp.*
 .yarn/*
+
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# =========================
+# Build outputs
+# =========================
+.next/
+out/
+dist/
+build/
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# =========================
+# Logs
+# =========================
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# =========================
+# Testing
+# =========================
+coverage/
 
-# vercel
+# =========================
+# OS / Editor
+# =========================
+.DS_Store
+.vscode/
+.idea/
+
+# =========================
+# Vercel
+# =========================
 .vercel
 
-# typescript
+# =========================
+# TypeScript
+# =========================
 *.tsbuildinfo
 next-env.d.ts
